[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickbase_model_maker_robswc"
version = "0.0.1"
authors = [
  { name="Robert Carroll", email="robert.s.w.carroll@gmail.com" },
]
description = "A lightweight model maker for quickbase"
readme = "README.md"
#license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/robswc/quickbase-model-maker"
"Bug Tracker" = "https://github.com/robswc/quickbase-model-maker/issues"