[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickbase_model_maker"
version = "0.1.2"
authors = [
  { name="Robert Carroll", email="robert.s.w.carroll@gmail.com" },
]
description = "A lightweight model maker for quickbase"
readme = "README.md"
#license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [
    { include = "quickbase_model_maker", from = "src" },
    { include = "model_maker", from = "quickbase_model_maker" },
]

[project.urls]
"Homepage" = "https://github.com/robswc/quickbase-model-maker"
"Bug Tracker" = "https://github.com/robswc/quickbase-model-maker/issues"

[tool.poetry.dependencies]
requests = "2.28.1"